[gd_scene load_steps=11 format=2]

[ext_resource path="res://Brick.gd" type="Script" id=1]
[ext_resource path="res://Emitter.tscn" type="PackedScene" id=2]
[ext_resource path="res://CannonBall.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/9_mm_gunshot-mike-koenig-123.wav" type="AudioStream" id=4]
[ext_resource path="res://Sprites/Canon and Ball/canon.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 6.97192, 13.9409 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 7.78976, 14.6315 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 150.0

[sub_resource type="Animation" id=4]

resource_name = "idle"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=5]

resource_name = "shooting"
length = 2.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[node name="Brick" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
direction = ""
object_name = "brick"
velocity = 5

[node name="StaticBody2D" type="StaticBody2D" parent="." index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]

shape = SubResource( 1 )

[node name="HitArea" type="Area2D" parent="StaticBody2D" index="1"]

editor/display_folded = true
visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/HitArea" index="0"]

shape = SubResource( 2 )

[node name="Shoot" parent="StaticBody2D" index="2" instance=ExtResource( 2 )]

object = ExtResource( 3 )
object_name = "brick"
emitter = true
alpha = false
object_life_time = 5.0
emitter_time = 0.5
emitter_counter = 1
object_scale = Vector2( 0.3, 0.3 )
dir = "down"

[node name="SoundArea" type="Area2D" parent="StaticBody2D" index="3" groups=[
"notCollide",
]]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/SoundArea" index="0"]

shape = SubResource( 3 )

[node name="ShootSound" type="AudioStreamPlayer" parent="StaticBody2D/SoundArea" index="1"]

stream = ExtResource( 4 )
volume_db = -80.0
pitch_scale = 3.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="AnimationPlayer" type="AnimationPlayer" parent="StaticBody2D" index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 4.0
anims/idle = SubResource( 4 )
anims/shooting = SubResource( 5 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Sprite" type="Sprite" parent="StaticBody2D" index="5"]

texture = ExtResource( 5 )
vframes = 2
hframes = 8
frame = 11
_sections_unfolded = [ "Animation" ]

[node name="ProgressBar" type="ProgressBar" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -19.0
margin_top = -35.0
margin_right = 21.0
margin_bottom = -19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 1000.0
step = 1.0
page = 0.0
value = 1000.0
exp_edit = false
rounded = false
percent_visible = true
_sections_unfolded = [ "Percent" ]


